2013-01-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* ChangeLog: annual ChangeLog rotation time